// important, always need to specify protobuf version
syntax = "proto3";

option csharp_namespace = "Discount.GRPC";

package discount;

//The discount service definition
service DiscountProtoService {
	// Discount CRUD Operations
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string roomCategory = 1;
}

// numbers specify the order of parameters
message CouponModel {
	int32 id = 1;
	string roomCategory = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string roomCategory = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}